navbar is now fixed (always visible at the top of the page)

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -16,6 +16,10 @@
     cursor: pointer;
 }
 
+.nav-list {
+    padding-top: 15px;
+}
+
 .nav-sub>li>span,
 .nav-list>li>span {
     position: relative;
